<resources>
    <string name="app_name">TracNghiemTiengAnh</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="interstitial_full_screen">ca-app-pub-8772406902354164/8968848339</string>
    <string name="gcm_id">96792178255</string>

    <string name="action_settings">Settings</string>

    <string name="cauhoi">Câu Hỏi</string>
    <string name="dapan">Đáp Án</string>
    <string name="dapandung">Đáp Án Đúng</string>
    <string name="time">Time</string>
    <string name="exam">Bài thi</string>
    <!-- main-->
    <string name="tracnghiemTA">TRẮC NGHIỆM TIẾNG ANH</string>
    <string name="tanhTHPT">Dành cho học sinh THPT</string>
    <string name="nguphap">Lý thuyết</string>
    <string name="tracnghiem">Trắc nghiệm</string>
    <string name="ungdung">Ứng dụng nổi bật</string>
    <string name="Communicate">Communicate</string>
    <string name="danhgia">Đánh giá ứng dụng</string>
    <string name="share">Chia sẻ</string>
    <string name="phanhoi">Gửi phản hồi</string>
    <string name="thongtin">Thông tin</string>
    <!-- grammars-->
    <string name="luyentap">Luyện Tập</string>
    <!-- tests-->
    <string name="baithi">Bài Thi :</string>
    <string name="thoigian">Thời Gian :</string>
    <string name="phut">60 phút</string>
    <!-- ungdung-->
    <string name="caidat">Cài Đặt</string>
    <!-- test-->
    <string name="nopbai">NỘP BÀI</string>
    <string name="Next">Tiếp Theo</string>
    <string name="Prev">Quay Lại</string>
    <!-- exercises-->
    <string name="kiemtra">Kiểm Tra</string>
    <string name="tieptheo">Tiếp Theo</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <!-- activityketqua-->
    <string name="ketqua">Kết Quả</string>
    <string name="diensocuaban">ĐIỂM SỐ CỦA BẠN</string>
    <string name="dung">Đúng</string>
    <string name="sai">Sai</string>
    <string name="chualam">Chưa Làm</string>
    <string name="chitiet">Chi Tiết</string>
    <string name="thugon">Thu Gọn</string>
    <string name="next">Tiếp Theo</string>
    <string name="reset">Làm Lại</string>
    <string name="ketquabaikt">Kết Quả\nBài Kiểm Tra\n</string>
    <string name="hoanthanhluyentap">Chúc mừng bạn đã hoàn thành Bài Luyện Tập :</string>
    <string name="hoanthanhbaithi">Chúc mừng bạn đã hoàn thành Bài Thi :</string>
    <string name="dienso"> Điểm số của bạn là :</string>
    <string name="message">Message</string>
    <string name="gui">Gửi</string>
    <string name="canon">Cảm ơn bạn đã sử dụng ứng dụng của chúng tôi!Nếu Bạn có bất cứ thắc mắc hay ý kiến xây dựng nào ,hãy chia sẻ nó với chúng tôi.Chúng Tôi sẽ biến mọi ý kiến đó thành sự thật.\n
    Nếu thấy ứng dụng hay và hữu ích hãy chia nó vì nó là miễn phí.\n
    Ứng dụng là miễn phí nên chúng tôi rất cảm ơn nếu thi thoảng bạn click quảng cáo , đó là đọng lực để chúng tôi tiếp tục phát triển những ứng dụng hay hơn trong tương lai.\n
    Xin Cảm Ơn !</string>
    <!--thôngtin-->
    <string name="sophienban">Số Phiên Bản</string>
    <string name="nguoiphattrien">Người Phát Triển</string>
    <string name="name1">Lê Công Tuấn Anh</string>
    <string name="name2">Nguyễn Đăng Cương</string>
    <string name="name3">Đinh Viết Ưng</string>
    <string name="name4"> Nguyễn Thanh Bản</string>
    <string name="name5"> Nguyễn Việt Anh</string>
    <string name="name6"> Anh Phan Anh</string>
    <string name="designer">Designer</string>
    <string name="lienhe">Liên Hê</string>
    <string name="itpsoft">Trung tâm phần mền ITPSOFT - ITPlusAcademy</string>
    <string name="diachi">Địa Chỉ :Tầng 5, Nhà E3, Viện CNTT, ĐHQG HN, 144 Xuân Thủy, Cầu Giấy, Hà Nội</string>
    <string name="phone">Phone: 04 3754 6732|Fax:04 3754 6732</string>
    <string name="contact">contact@itpsoft.com.vn</string>
    <string name="link">www.itpsoft.com.vn</string>
    <string name="banquyen">Bản quyền thuộc về ITPSOFT - ITPlus Academy</string>
    <!--bode-->
    <string name="tenbode">Tên Bộ Đề</string>
    <string name="bode">Bộ Đề</string>
    <string name="dethi">Đề Thi</string>

</resources>
