<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="vn.edu.itplus_academy.tracnghiemtienganh.Activitys.ThongTinActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorWhite">
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:gravity="center_horizontal"
                android:id="@+id/layoutTT">
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="120dp"
                    android:src="@drawable/itplus"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sophienban"
                    android:textSize="18sp"
                    android:layout_margin="6dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>
                <TextView
                    android:id="@+id/txt_sophienban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:textSize="16sp"
                    android:textColor="#cb000000"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nguoiphattrien"
                    android:textSize="18dp"
                    android:layout_margin="6dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name4"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name1"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name2"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name3"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designer"
                    android:textSize="18sp"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name5"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name6"
                    android:textSize="16dp"
                    android:textColor="#cb000000"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dedede"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lienhe"
                    android:textSize="18dp"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itpsoft"
                    android:textSize="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/diachi"
                    android:textSize="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="10dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:textSize="10dp"
                    android:gravity="center"
                    android:id="@+id/linkTT"/>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/banquyen"
            android:textColor="@color/colorWhite"
            />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
